kubernetes/deployment.yml
# name space is given 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cinnamon-209
  name: deployment
  labels:
    app: bus-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bus-app
  template:
    metadata:
      labels:
        app: bus-app
    spec:
      containers:
      - name: bus-app
        image: registry.cloud.okteto.net/cinnamon-209/cinnamon-209:bus-app
        imagePullPolicy: Always
        ports:
        - containerPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  namespace: cinnamon-209
  name: bus-app-service
spec:
  type: NodePort
  selector:
    app: bus-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: cinnamon-209
  name: bus-app-ingress
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bus-app
            port:
              number: 80

# ---
# apiVersion: v1
# kind: Pod
# metadata:
#   namespace: cinnamon-209
#   name: liveness-exec
#   labels:
#     test: liveness
# spec:
#   containers:
#   - name: liveness
#     image: k8s.gcr.io/busybox
#     imagePullPolicy: Always
#     args:
#     - /bin/sh
#     - -c
#     - touch /tmp/healthy; sleep 30; rm -f /tmp/healthy; sleep 600
    # livenessProbe:
    #   exec: 
    #     command:
    #     - cat
    #     - /tmp/healthy
    #   initialDelaySeconds: 5
    #   periodSeconds: 5
